1. Removed contact us component. 2. Changed favicon.ico. 3. Fixed alignment issue in Registration component.

--- a/styles/Registration.module.css
+++ b/styles/Registration.module.css
@@ -67,12 +67,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px;
 }
 
 .regRuleContainer p {
     font-size: 1.6rem;
     font-weight: bold;
     color: #777;
+    text-align: center;
 }
 
 .regRuleContainer a {
